qtsvg-opensource-src (5.9.0-2) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 09 Jun 2017 18:42:00 +0300

qtsvg-opensource-src (5.9.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.9.0.
  * Update debian/libqt5svg5.symbols.
  * Drop unused Lintian override about ABI package dependency.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 08 Jun 2017 21:49:57 +0300

qtsvg-opensource-src (5.7.1~20161021-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 01 Nov 2016 15:10:10 +0300

qtsvg-opensource-src (5.7.1~20161021-1) experimental; urgency=medium

  * New upstream snapshot.
    - Bump Qt build dependencies.
  * Remove fix_qicon_test.diff, it's already present upstream.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Oct 2016 17:54:16 -0300

qtsvg-opensource-src (5.7.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.7.0.
  * Replace disable_qicon_test.diff patch with (forwarded) fix_qicon_diff,
    which fixes the test instead of disabling it.
  * Update debian/copyright.
  * Add Qt_5.7 version tag to debian/libqt5svg5.symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 09 Jul 2016 20:24:03 +0300

qtsvg-opensource-src (5.6.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 13 Jun 2016 11:15:41 -0300

qtsvg-opensource-src (5.6.1-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.
  * Update Standards-Version to 3.9.8, no changes required.
  * Add qtbase5-dev to build dependencies. It is currently pulled in by
    qtbase5-private-dev, but having it listed means that this package
    will not transition before qtbase itself.
  * Remove fix_install_path.diff, it is already applied upstream.
