@@ -1,5 +1,7 @@
 qtsvg-opensource-src (5.9.0-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Migrate to automatic dbgsym packages.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 09 Jun 2017 18:42:00 +0300
 
